welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:7: error: illegal start of simple expression
	if  (a+b-b-c)=10)
                     ^